--- a/StevensAssignment2.html
+++ b/StevensAssignment2.html
@@ -9,22 +9,17 @@
 				This Is Me!
 			</h1>
 			<h2>
-				Look Out Cuz Here I Come
+				Who am I?
 			</h2>
 			<p>
 				I’m <strong>Emily Stevens</strong> and I’m a junior at the Early College at Guilford.  I’m a <em>competitive swimmer</em>for Star Aquatics and a <em>team captain</em> for the Western Guilford High School varsity swim team.  The ongoing pandemic has shown me that more than anything, I need to be <strong>flexible</strong> in planning and to seize opportunities.  When the pandemic hit, I was <em>swimming every afternoon</em> with a large group of teammates, so that had to stop abruptly.  I was <em>volunteering</em> at the Greensboro Science Center, a service activity that I have been unable to participate in for an entire year.  I was going to school, <em>preparing for advanced placement exams.</em>  Suddenly, to protect the health and safety of myself and others, I was not allowed to leave my house for multiple months.  This pandemic <strong>forced</strong> me to make decisions for myself and others that could potentially prevent lives of individuals—strangers—from being at risk.  I have become stronger both physically and mentally because of this pandemic.  During this <strong>crucial</strong> stage of development in my life, I have managed to become a better person.	
 			</p>
 			<h2>
-				Marching On to the Beat I Drum
+				Moving On
 			</h2>
 			<p>
 				When the pandemic hit, I <strong>could have</strong> chosen to disobey the orders of Governor Cooper and <em>continued hanging out</em> with friends and not abiding by his guidelines, but I <strong>chose</strong> to stay home and do my part to help others.  I also decided to begin <em>working harder at building more physical strength</em> while I was being pushed to the limits mentally.  I began <em>training</em> more aggressively for the sport of ninja.  With the help of my mom, I <em>built a ninja course</em> in my backyard and was able to become stronger without a gym or fitness facility.  The virus helped to <em>begin my ninja career</em> and make <strong>me</strong> the strongest I have ever been and <strong>changed my mental perspective</strong> about the lockdown.  I <strong>could have</strong> thought about the pandemic as a time that ruined my year and caused me to miss out on crucial parts of my life, but I <strong>chose</strong> a different route.  Instead, the pandemic was a time for me to get back on the path I was meant to take and become a better person, in life and in sports.  The pandemic gave me the time I needed to <em>“get back on my feet”</em> after a tough year and begin bounding toward my future.
 			</p>
-			<h2>
-				Breaking Through the Barricade
-			</h2>
-			<p>
-				Now, I have managed to <strong>break through</strong> my sluggish, depressed state and become someone that I am beginning to be proud of.  I have managed to <em>focus</em> on my schoolwork and my athletics better since something clicked in quarantine and I physically feel the most fit and the best I have ever felt.  Now that we are starting to <em>escape</em>  the confinements of our homes to begin doing some social events and gatherings, I am able to <em>walk out</em> of my house confidently, knowing how much of a better individual <strong>I have become</strong> since March 12, 2020.
-			</p>
+			
 		</body>
 	</html>
