--- a/StevensAssignment2_2.html
+++ b/StevensAssignment2_2.html
@@ -6,10 +6,10 @@
     <head>
     <body>
         <h1>
-            Becoming Myself Again
+            Who am I?
         </h1>
         <p>
-            Now, I have managed to <strong>break through</strong> my sluggish, depressed state and become someone that I am beginning to be proud of.  I have managed to <em>focus</em> on my schoolwork and my athletics better since something clicked in quarantine and I physically feel the most fit and the best I have ever felt.  Now that we are starting to <em>escape</em>  the confinements of our homes to begin doing some social events and gatherings, I am able to <em>walk out</em> of my house confidently, knowing how much of a better individual <strong>I have become</strong> since March 12, 2020.
+            I’m <strong>Emily Stevens</strong> and I’m a junior at the Early College at Guilford.  I’m a <em>competitive swimmer</em>for Star Aquatics and a <em>team captain</em> for the Western Guilford High School varsity swim team.  The ongoing pandemic has shown me that more than anything, I need to be <strong>flexible</strong> in planning and to seize opportunities.  When the pandemic hit, I was <em>swimming every afternoon</em> with a large group of teammates, so that had to stop abruptly.  I was <em>volunteering</em> at the Greensboro Science Center, a service activity that I have been unable to participate in for an entire year.  I was going to school, <em>preparing for advanced placement exams.</em>  Suddenly, to protect the health and safety of myself and others, I was not allowed to leave my house for multiple months.  This pandemic <strong>forced</strong> me to make decisions for myself and others that could potentially prevent lives of individuals—strangers—from being at risk.  I have become stronger both physically and mentally because of this pandemic.  During this <strong>crucial</strong> stage of development in my life, I have managed to become a better person.	
         </p>
     </body>
 </html>
