--- a/StevensAssignment2.html
+++ b/StevensAssignment2.html
@@ -11,5 +11,6 @@
 			<a href="StevensAssignment2_2.html">Who am I?</a>
 			<a href="StevensAssignment2_3.html">Moving On</a>
 			<a href="StevensAssignment2_4.html">Becoming Myself Again</a>
+			<img src="images/dug.png" width = 100 alt ="Dug the Golden Retriever">
 		</body>
 	</html>
