added more links

--- a/StevensAssignment2_4.html
+++ b/StevensAssignment2_4.html
@@ -11,5 +11,8 @@
         <p>
             Now, I have managed to <strong>break through</strong> my sluggish, depressed state and become someone that I am beginning to be proud of.  I have managed to <em>focus</em> on my schoolwork and my athletics better since something clicked in quarantine and I physically feel the most fit and the best I have ever felt.  Now that we are starting to <em>escape</em>  the confinements of our homes to begin doing some social events and gatherings, I am able to <em>walk out</em> of my house confidently, knowing how much of a better individual <strong>I have become</strong> since March 12, 2020.
         </p>
+        <a href="StevensAssignment2.html">Home</a>
+        <a href="StevensAssignment2_2.html">Who am I?</a>
+		<a href="StevensAssignment2_3.html">Moving On</a>
     </body>
 </html>
