--- a/StevensAssignment2_3.html
+++ b/StevensAssignment2_3.html
@@ -11,5 +11,8 @@
         <p>
             When the pandemic hit, I <strong>could have</strong> chosen to disobey the orders of Governor Cooper and <em>continued hanging out</em> with friends and not abiding by his guidelines, but I <strong>chose</strong> to stay home and do my part to help others.  I also decided to begin <em>working harder at building more physical strength</em> while I was being pushed to the limits mentally.  I began <em>training</em> more aggressively for the sport of ninja.  With the help of my mom, I <em>built a ninja course</em> in my backyard and was able to become stronger without a gym or fitness facility.  The virus helped to <em>begin my ninja career</em> and make <strong>me</strong> the strongest I have ever been and <strong>changed my mental perspective</strong> about the lockdown.  I <strong>could have</strong> thought about the pandemic as a time that ruined my year and caused me to miss out on crucial parts of my life, but I <strong>chose</strong> a different route.  Instead, the pandemic was a time for me to get back on the path I was meant to take and become a better person, in life and in sports.  The pandemic gave me the time I needed to <em>“get back on my feet”</em> after a tough year and begin bounding toward my future.
         </p>
+        <a href="StevensAssignment2.html">Home</a>
+		<a href="StevensAssignment2_2.html">Who am I?</a>
+		<a href="StevensAssignment2_4.html">Becoming Myself Again</a>
     </body>
 </html>
