added images to pages

--- a/StevensAssignment2_2.html
+++ b/StevensAssignment2_2.html
@@ -14,5 +14,6 @@
         <a href="StevensAssignment2.html">Home</a>
 		<a href="StevensAssignment2_3.html">Moving On</a>
 		<a href="StevensAssignment2_4.html">Becoming Myself Again</a>
+        <img src="images/olaf.png" width = 1000 title ="Olaf the Snowman">
     </body>
 </html>
