--- a/StevensAssignment2_3.html
+++ b/StevensAssignment2_3.html
@@ -14,5 +14,6 @@
         <a href="StevensAssignment2.html">Home</a>
 		<a href="StevensAssignment2_2.html">Who am I?</a>
 		<a href="StevensAssignment2_4.html">Becoming Myself Again</a>
+        <img src="images/pumbaa.png" width = 1000 title ="Pumbaa the Warthog">
     </body>
 </html>
