--- a/StevensAssignment2_4.html
+++ b/StevensAssignment2_4.html
@@ -14,5 +14,6 @@
         <a href="StevensAssignment2.html">Home</a>
         <a href="StevensAssignment2_2.html">Who am I?</a>
 		<a href="StevensAssignment2_3.html">Moving On</a>
+        <img src="images/rex.png" width = 1000 title ="Rex the Dino Toy">
     </body>
 </html>
