--- a/StevensAssignment2.html
+++ b/StevensAssignment2.html
@@ -3,6 +3,7 @@
 		<head>
 			<meta charset="utf-8">
 			<title>Mindset Changes and Mental Health Challenges</title>
+			<link rel="stylesheet" href="myStyle.css">
 		</head>
 		<body>
 			<h1>
