--- a/StevensAssignment2_3.html
+++ b/StevensAssignment2_3.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="utf-8">
 			<title>Mindset Changes and Mental Helath Challenges</title>
+            <link rel="stylesheet" href="myStyle.css">
     <head>
     <body>
         <h1>
@@ -10,6 +11,12 @@
         </h1>
         <p>
             When the pandemic hit, I <strong>could have</strong> chosen to disobey the orders of Governor Cooper and <em>continued hanging out</em> with friends and not abiding by his guidelines, but I <strong>chose</strong> to stay home and do my part to help others.  I also decided to begin <em>working harder at building more physical strength</em> while I was being pushed to the limits mentally.  I began <em>training</em> more aggressively for the sport of ninja.  With the help of my mom, I <em>built a ninja course</em> in my backyard and was able to become stronger without a gym or fitness facility.  The virus helped to <em>begin my ninja career</em> and make <strong>me</strong> the strongest I have ever been and <strong>changed my mental perspective</strong> about the lockdown.  I <strong>could have</strong> thought about the pandemic as a time that ruined my year and caused me to miss out on crucial parts of my life, but I <strong>chose</strong> a different route.  Instead, the pandemic was a time for me to get back on the path I was meant to take and become a better person, in life and in sports.  The pandemic gave me the time I needed to <em>“get back on my feet”</em> after a tough year and begin bounding toward my future.
+        </p>
+        <h2>
+            Pumbaa
+        </h2>
+        <p>
+            I grew up loving Pumbaa because he is such a gentle soul who loves others and smiles in the face of adversity.  While he does have his dumb moments, he did choose to save a lion cub, knowing fullwell that lions eat warthogs, and raised Simba to be different than the rest of the lions.  He also experienced bullying from his own species, but kept his head up and sung "Hakuna Matata."
         </p>
         <a href="StevensAssignment2.html">Home</a>
 		<a href="StevensAssignment2_2.html">Who am I?</a>
