--- a/StevensAssignment2_4.html
+++ b/StevensAssignment2_4.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="utf-8">
 			<title>Mindset Changes and Mental Helath Challenges</title>
+            <link rel="stylesheet" href="myStyle.css">
     <head>
     <body>
         <h1>
@@ -10,6 +11,12 @@
         </h1>
         <p>
             Now, I have managed to <strong>break through</strong> my sluggish, depressed state and become someone that I am beginning to be proud of.  I have managed to <em>focus</em> on my schoolwork and my athletics better since something clicked in quarantine and I physically feel the most fit and the best I have ever felt.  Now that we are starting to <em>escape</em>  the confinements of our homes to begin doing some social events and gatherings, I am able to <em>walk out</em> of my house confidently, knowing how much of a better individual <strong>I have become</strong> since March 12, 2020.
+        </p>
+        <h2>
+            Rex
+        </h2>
+        <p>
+            Rex has always been a character that I love simply because of his energetic personality.  Even though he is not the favorite, and is not always played with, he holds his head up and does all he can to help the other toys.  He is a fun character that always looks for the best in others, but is also very protective of his friends.  Although he is a t-rex, he does not let that define him and is a good guy.
         </p>
         <a href="StevensAssignment2.html">Home</a>
         <a href="StevensAssignment2_2.html">Who am I?</a>
