--- a/StevensAssignment2_2.html
+++ b/StevensAssignment2_2.html
@@ -10,13 +10,26 @@
             Who am I?
         </h1>
         <p>
-            I’m <strong>Emily Stevens</strong> and I’m a junior at the Early College at Guilford.  I’m a <em>competitive swimmer</em>for Star Aquatics and a <em>team captain</em> for the Western Guilford High School varsity swim team.  The ongoing pandemic has shown me that more than anything, I need to be <strong>flexible</strong> in planning and to seize opportunities.  When the pandemic hit, I was <em>swimming every afternoon</em> with a large group of teammates, so that had to stop abruptly.  I was <em>volunteering</em> at the Greensboro Science Center, a service activity that I have been unable to participate in for an entire year.  I was going to school, <em>preparing for advanced placement exams.</em>  Suddenly, to protect the health and safety of myself and others, I was not allowed to leave my house for multiple months.  This pandemic <strong>forced</strong> me to make decisions for myself and others that could potentially prevent lives of individuals—strangers—from being at risk.  I have become stronger both physically and mentally because of this pandemic.  During this <strong>crucial</strong> stage of development in my life, I have managed to become a better person.	
+            I’m <strong>Emily Stevens</strong> and I’m a junior at the Early College at Guilford.  I’m a <em>competitive swimmer</em>for 
+            Star Aquatics and a <em>team captain</em> for the Western Guilford High School varsity swim team.  The ongoing pandemic has 
+            shown me that more than anything, I need to be <strong>flexible</strong> in planning and to seize opportunities.  
+        </p>
+        <p>
+            When the pandemic hit, I was <em>swimming every afternoon</em> with a large group of teammates, so that had to stop abruptly.
+            I was <em>volunteering</em> at the Greensboro Science Center, a service activity that I have been unable to participate in 
+            for an entire year.  I was going to school, <em>preparing for advanced placement exams.</em>  Suddenly, to protect the health
+            and safety of myself and others, I was not allowed to leave my house for multiple months.  This pandemic <strong>forced</strong>
+            me to make decisions for myself and others that could potentially prevent lives of individuals—strangers—from being at risk.  
+            I have become stronger both physically and mentally because of this pandemic.  During this <strong>crucial</strong> stage of 
+            development in my life, I have managed to become a better person.	
         </p>
         <h2>
             Olaf
         </h2>
         <p>
-            I have always loved Olaf because he remains happy throughout his entire story, and wants the best for his friends, regradless of what he will recieve in return.  He chooses to help others, even if it means dying, and even though he is lonely, he keeps a smile on his face to help others remain positive.
+            I have always loved Olaf because he remains happy throughout his entire story, and wants the best for his friends, regradless 
+            of what he will recieve in return.  He chooses to help others, even if it means dying, and even though he is lonely, he keeps 
+            a smile on his face to help others remain positive.
         </p>
         <a href="StevensAssignment2.html">Home</a>
 		<a href="StevensAssignment2_3.html">Moving On</a>
