--- a/StevensAssignment2_2.html
+++ b/StevensAssignment2_2.html
@@ -6,34 +6,48 @@
             <link rel="stylesheet" href="myStyle.css">
     <head>
     <body>
+        <header>
+            <div class="header">
+                <div class="headerstuff"><a href="StevensAssignment2.html">Home</a></div>
+                <div class="headerstuff"><a href="StevensAssignment2_2.html">Who am I?</a></div>
+                <div class="headerstuff"><a href="StevensAssignment2_3.html">Moving On</a></div>
+                <div class="headerstuff"><a href="StevensAssignment2_4.html">Becoming Myself Again</a></div>
+            </div>
+        </header>
         <h1>
             Who am I?
         </h1>
-        <p>
-            I’m <strong>Emily Stevens</strong> and I’m a junior at the Early College at Guilford.  I’m a <em>competitive swimmer</em>for 
-            Star Aquatics and a <em>team captain</em> for the Western Guilford High School varsity swim team.  The ongoing pandemic has 
-            shown me that more than anything, I need to be <strong>flexible</strong> in planning and to seize opportunities.  
-        </p>
-        <p>
-            When the pandemic hit, I was <em>swimming every afternoon</em> with a large group of teammates, so that had to stop abruptly.
-            I was <em>volunteering</em> at the Greensboro Science Center, a service activity that I have been unable to participate in 
-            for an entire year.  I was going to school, <em>preparing for advanced placement exams.</em>  Suddenly, to protect the health
-            and safety of myself and others, I was not allowed to leave my house for multiple months.  This pandemic <strong>forced</strong>
-            me to make decisions for myself and others that could potentially prevent lives of individuals—strangers—from being at risk.  
-            I have become stronger both physically and mentally because of this pandemic.  During this <strong>crucial</strong> stage of 
-            development in my life, I have managed to become a better person.	
-        </p>
+        <div class = "paragraphs">
+            <p class = "aboutme">
+                I’m <strong>Emily Stevens</strong> and I’m a junior at the Early College at Guilford.  I’m a <em>competitive swimmer</em> for 
+                Star Aquatics and a <em>team captain</em> for the Western Guilford High School varsity swim team.  The ongoing pandemic has 
+                shown me that more than anything, I need to be <strong>flexible</strong> in planning and to seize opportunities.  
+            </p>
+            <p class = "myactions">
+                When the pandemic hit, I was <em>swimming every afternoon</em> with a large group of teammates, so that had to stop abruptly.
+                I was <em>volunteering</em> at the Greensboro Science Center, a service activity that I have been unable to participate in 
+                for an entire year.  I was going to school, <em>preparing for advanced placement exams.</em>  Suddenly, to protect the health
+                and safety of myself and others, I was not allowed to leave my house for multiple months.  This pandemic <strong>forced</strong>
+                me to make decisions for myself and others that could potentially prevent lives of individuals—strangers—from being at risk.  
+                I have become stronger both physically and mentally because of this pandemic.  During this <strong>crucial</strong> stage of 
+                development in my life, I have managed to become a better person.	
+            </p>
+        </div>
         <h2>
-            Olaf
+            <strong>Olaf</strong>
         </h2>
-        <p>
+        <p class = "characters">
+            <img src="images/olaf.png" title ="Olaf the Snowman">
             I have always loved Olaf because he remains happy throughout his entire story, and wants the best for his friends, regradless 
             of what he will recieve in return.  He chooses to help others, even if it means dying, and even though he is lonely, he keeps 
             a smile on his face to help others remain positive.
         </p>
-        <a href="StevensAssignment2.html">Home</a>
-		<a href="StevensAssignment2_3.html">Moving On</a>
-		<a href="StevensAssignment2_4.html">Becoming Myself Again</a>
-        <img src="images/olaf.png" width = 450 title ="Olaf the Snowman">
+        <footer>
+			<div class="footer">
+				<div class="footerstuff">Emily Stevens</div>
+				<div class="footerstuff">Date Last Modified: 23 April 2021</div>
+				<div class="footerstuff">stevense@guilford.edu</div>
+			</div>
+		</footer>
     </body>
 </html>
