--- a/StevensAssignment2_4.html
+++ b/StevensAssignment2_4.html
@@ -6,28 +6,42 @@
             <link rel="stylesheet" href="myStyle.css">
     <head>
     <body>
+        <header>
+            <div class="header">
+                <div class="headerstuff"><a href="StevensAssignment2.html">Home</a></div>
+                <div class="headerstuff"><a href="StevensAssignment2_2.html">Who am I?</a></div>
+                <div class="headerstuff"><a href="StevensAssignment2_3.html">Moving On</a></div>
+                <div class="headerstuff"><a href="StevensAssignment2_4.html">Becoming Myself Again</a></div>
+            </div>
+        </header>
         <h1>
             Becoming Myself Again
         </h1>
-        <p>
+        <div class = "paragraphs">
+        <p class = "myactions">
             Now, I have managed to <strong>break through</strong> my sluggish, depressed state and become someone that I am beginning 
             to be proud of.  I have managed to <em>focus</em> on my schoolwork and my athletics better since something clicked in 
             quarantine and I physically feel the most fit and the best I have ever felt.  Now that we are starting to <em>escape</em> 
             the confinements of our homes to begin doing some social events and gatherings, I am able to <em>walk out</em> of my house 
             confidently, knowing how much of a better individual <strong>I have become</strong> since March 12, 2020.
         </p>
+        </div>
         <h2>
-            Rex
+            <strong>Rex</strong>
         </h2>
-        <p>
+        <p class = "characters">
+            <img src="images/rex.png" title ="Rex the Dino Toy">
             Rex has always been a character that I love simply because of his energetic personality.  Even though he is not the favorite, 
             and is not always played with, he holds his head up and does all he can to help the other toys.  He is a fun character that 
             always looks for the best in others, but is also very protective of his friends.  Although he is a t-rex, he does not let that 
             define him and is a good guy.
         </p>
-        <a href="StevensAssignment2.html">Home</a>
-        <a href="StevensAssignment2_2.html">Who am I?</a>
-		<a href="StevensAssignment2_3.html">Moving On</a>
-        <img src="images/rex.png" width = 600 title ="Rex the Dino Toy">
+        <footer>
+			<div class="footer">
+				<div class="footerstuff">Emily Stevens</div>
+				<div class="footerstuff">Date Last Modified: 23 April 2021</div>
+				<div class="footerstuff">stevense@guilford.edu</div>
+			</div>
+		</footer>
     </body>
 </html>
