--- a/StevensAssignment2.html
+++ b/StevensAssignment2.html
@@ -6,12 +6,28 @@
 			<link rel="stylesheet" href="myStyle.css">
 		</head>
 		<body>
-			<h1>
+			<header>
+				<div class="header">
+					<div class="headerstuff"><a href="StevensAssignment2.html">Home</a></div>
+					<div class="headerstuff"><a href="StevensAssignment2_2.html">Who am I?</a></div>
+					<div class="headerstuff"><a href="StevensAssignment2_3.html">Moving On</a></div>
+					<div class="headerstuff"><a href="StevensAssignment2_4.html">Becoming Myself Again</a></div>
+				</div>
+			</header>
+			<h1 id = "homepageheading">
 				This Is Me!
 			</h1>
-			<a href="StevensAssignment2_2.html">Who am I?</a>
-			<a href="StevensAssignment2_3.html">Moving On</a>
-			<a href="StevensAssignment2_4.html">Becoming Myself Again</a>
-			<img src="images/dug.png" width = 1000 title ="Dug the Golden Retriever">
+			<div id = "homepagelinks">
+			
+			</div>
+			<img id = "dugimagehome" src="images/dug.png" title ="Dug the Golden Retriever">
+
 		</body>
+		<footer>
+			<div class="footer">
+					<div class="footerstuff">Emily Stevens</div>
+					<div class="footerstuff">Date Last Modified: 23 April 2021</div>
+					<div class="footerstuff">stevense@guilford.edu</div>
+			</div>
+		</footer>
 	</html>
