--- a/StevensAssignment2.html
+++ b/StevensAssignment2.html
@@ -1,4 +1,4 @@
-	<!DOCTYPE HTML5>
+	<!DOCTYPE HTML>
 	<html>
 		<head>
 			<meta charset="utf-8">
@@ -20,14 +20,13 @@
 			<div id = "homepagelinks">
 			
 			</div>
-			<img id = "dugimagehome" src="images/dug.png" title ="Dug the Golden Retriever">
-
-		</body>
-		<footer>
-			<div class="footer">
+			<img id = "dugimagehome" src="images/dug.png" title ="Dug the Golden Retriever">		
+			<footer>
+				<div class="footer">
 					<div class="footerstuff">Emily Stevens</div>
 					<div class="footerstuff">Date Last Modified: 23 April 2021</div>
 					<div class="footerstuff">stevense@guilford.edu</div>
-			</div>
-		</footer>
+				</div>
+			</footer>
+		</body>
 	</html>
