--- a/StevensAssignment2_2.html
+++ b/StevensAssignment2_2.html
@@ -1,5 +1,5 @@
-<!DOCTYPE HTML lang= "en">
-<html>
+<!DOCTYPE HTML>
+<html lang="en">
     <head>
         <meta charset="utf-8">
 			<title>Mindset Changes and Mental Helath Challenges</title>
