--- a/StevensAssignment2_4.html
+++ b/StevensAssignment2_4.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
 			<title>Mindset Changes and Mental Helath Challenges</title>
             <link rel="stylesheet" href="myStyle.css">
-    <head>
+    </head>
     <body>
         <header>
             <div class="header">
