added java stuff 1

--- a/StevensAssignment2_2.html
+++ b/StevensAssignment2_2.html
@@ -4,6 +4,7 @@
         <meta charset="utf-8">
 			<title>Mindset Changes and Mental Helath Challenges</title>
             <link rel="stylesheet" href="myStyle.css">
+            <script src="testscript.js" defer></script>
     </head>
     <body>
         <header>
@@ -18,7 +19,7 @@
             Who am I?
         </h1>
         <div class = "paragraphs">
-            <p class = "aboutme">
+            <p id = "firsttest">
                 I’m <strong>Emily Stevens</strong> and I’m a junior at the Early College at Guilford.  I’m a <em>competitive swimmer</em> for 
                 Star Aquatics and a <em>team captain</em> for the Western Guilford High School varsity swim team.  The ongoing pandemic has 
                 shown me that more than anything, I need to be <strong>flexible</strong> in planning and to seize opportunities.  
