--- a/StevensAssignment2_2.html
+++ b/StevensAssignment2_2.html
@@ -24,7 +24,8 @@
                 Star Aquatics and a <em>team captain</em> for the Western Guilford High School varsity swim team.  The ongoing pandemic has 
                 shown me that more than anything, I need to be <strong>flexible</strong> in planning and to seize opportunities.  
             </p>
-            <p class = "myactions">
+            <button id="anotherbutton">Click to make the Pumbaa Font Larger and Change Color</button>
+            <p class = "myactions", id =anotherbuttontest>
                 When the pandemic hit, I was <em>swimming every afternoon</em> with a large group of teammates, so that had to stop abruptly.
                 I was <em>volunteering</em> at the Greensboro Science Center, a service activity that I have been unable to participate in 
                 for an entire year.  I was going to school, <em>preparing for advanced placement exams.</em>  Suddenly, to protect the health
@@ -37,7 +38,8 @@
         <h2>
             <strong>Olaf</strong>
         </h2>
-        <p class = "characters">
+        <button id="thebutton">Click to make the Olaf Font Larger and Change Color</button>
+        <p class= "characters", id = "buttontest">
             <img src="images/olaf.png" title ="Olaf the Snowman">
             I have always loved Olaf because he remains happy throughout his entire story, and wants the best for his friends, regradless 
             of what he will recieve in return.  He chooses to help others, even if it means dying, and even though he is lonely, he keeps 
@@ -46,7 +48,7 @@
         <footer>
 			<div class="footer">
 				<div class="footerstuff">Emily Stevens</div>
-				<div class="footerstuff">Date Last Modified: 23 April 2021</div>
+				<div class="footerstuff">Date Last Modified: 26 April 2021</div>
 				<div class="footerstuff">stevense@guilford.edu</div>
 			</div>
 		</footer>
