--- a/StevensAssignment2_2.html
+++ b/StevensAssignment2_2.html
@@ -24,7 +24,7 @@
                 Star Aquatics and a <em>team captain</em> for the Western Guilford High School varsity swim team.  The ongoing pandemic has 
                 shown me that more than anything, I need to be <strong>flexible</strong> in planning and to seize opportunities.  
             </p>
-            <button id="anotherbutton">Click to make the Pumbaa Font Larger and Change Color</button>
+            <button id="anotherbutton">Click to make "My Actions" Font Larger and Change Color</button>
             <p class = "myactions", id =anotherbuttontest>
                 When the pandemic hit, I was <em>swimming every afternoon</em> with a large group of teammates, so that had to stop abruptly.
                 I was <em>volunteering</em> at the Greensboro Science Center, a service activity that I have been unable to participate in 
