--- a/StevensAssignment2_2.html
+++ b/StevensAssignment2_2.html
@@ -39,6 +39,7 @@
             <strong>Olaf</strong>
         </h2>
         <button id="thebutton">Click to make the Olaf Font Larger and Change Color</button>
+        <input type="text" id="myinput">
         <p class= "characters", id = "buttontest">
             <img src="images/olaf.png" title ="Olaf the Snowman">
             I have always loved Olaf because he remains happy throughout his entire story, and wants the best for his friends, regradless 
