--- a/StevensAssignment2_2.html
+++ b/StevensAssignment2_2.html
@@ -40,12 +40,14 @@
         </h2>
         <button id="thebutton">Click to make the Olaf Font Larger and Change Color</button>
         <input type="text" id="myinput">
-        <p class= "characters", id = "buttontest">
-            <img src="images/olaf.png" title ="Olaf the Snowman">
+        <div><button id="imgbutton">Click Here to Make Olaf Appear :)</button></div>
+            <img src="images/olaf.png" id="olafimage" title ="Olaf the Snowman"></img>
+        <p class =characters id = "buttontest">
             I have always loved Olaf because he remains happy throughout his entire story, and wants the best for his friends, regradless 
             of what he will recieve in return.  He chooses to help others, even if it means dying, and even though he is lonely, he keeps 
             a smile on his face to help others remain positive.
         </p>
+        </div>
         <footer>
 			<div class="footer">
 				<div class="footerstuff">Emily Stevens</div>
