--- a/StevensAssignment2.html
+++ b/StevensAssignment2.html
@@ -4,6 +4,7 @@
 			<meta charset="utf-8">
 			<title>Mindset Changes and Mental Health Challenges</title>
 			<link rel="stylesheet" href="myStyle.css">
+			<meta name="viewport" content="width=device-width, initial-scale=1">
 		</head>
 		<body>
 			<header>
@@ -24,7 +25,7 @@
 			<footer>
 				<div class="footer">
 					<div class="footerstuff">Emily Stevens</div>
-					<div class="footerstuff">Date Last Modified: 27 April 2021</div>
+					<div class="footerstuff">Date Last Modified: 28 April 2021</div>
 					<div class="footerstuff">stevense@guilford.edu</div>
 				</div>
 			</footer>
