most of assignment 7

--- a/StevensAssignment2_2.html
+++ b/StevensAssignment2_2.html
@@ -42,17 +42,18 @@
         <button id="thebutton">Click to make the Olaf Font Larger and Change Color</button>
         <input type="text" id="myinput">
         <div><button id="imgbutton">Click Here to Make Olaf Appear :)</button></div>
-            <img src="images/olaf.png" id="olafimage" title ="Olaf the Snowman"></img>
         <p class =characters id = "buttontest">
+            <img src="images/olaf.png" class="contentimg" id="olafimage" title ="Olaf the Snowman"></img>
             I have always loved Olaf because he remains happy throughout his entire story, and wants the best for his friends, regradless 
             of what he will recieve in return.  He chooses to help others, even if it means dying, and even though he is lonely, he keeps 
             a smile on his face to help others remain positive.
+            <img src="images/olaf.png" id="olafimage" title ="Olaf the Snowman"></img>
         </p>
         </div>
         <footer>
 			<div class="footer">
 				<div class="footerstuff">Emily Stevens</div>
-				<div class="footerstuff">Date Last Modified: 27 April 2021</div>
+				<div class="footerstuff">Date Last Modified: 29 April 2021</div>
 				<div class="footerstuff">stevense@guilford.edu</div>
 			</div>
 		</footer>
