--- a/StevensAssignment2_4.html
+++ b/StevensAssignment2_4.html
@@ -20,6 +20,7 @@
             Becoming Myself Again
         </h1>
         <div class = "paragraphs">
+            <img src="images/remy.jpg" id="remy" title ="Remy the Rat">
         <p class = "myactions">
             Now, I have managed to <strong>break through</strong> my sluggish, depressed state and become someone that I am beginning 
             to be proud of.  I have managed to <em>focus</em> on my schoolwork and my athletics better since something clicked in 
@@ -32,7 +33,7 @@
             <strong>Rex</strong>
         </h2>
         <p class = "characters">
-            <img src="images/rex.png" title ="Rex the Dino Toy">
+            <img src="images/rex.png" class= "contentimg" title ="Rex the Dino Toy">
             Rex has always been a character that I love simply because of his energetic personality.  Even though he is not the favorite, 
             and is not always played with, he holds his head up and does all he can to help the other toys.  He is a fun character that 
             always looks for the best in others, but is also very protective of his friends.  Although he is a t-rex, he does not let that 
@@ -41,7 +42,7 @@
         <footer>
 			<div class="footer">
 				<div class="footerstuff">Emily Stevens</div>
-				<div class="footerstuff">Date Last Modified: 27 April 2021</div>
+				<div class="footerstuff">Date Last Modified: 29 April 2021</div>
 				<div class="footerstuff">stevense@guilford.edu</div>
 			</div>
 		</footer>
