--- a/StevensAssignment2_3.html
+++ b/StevensAssignment2_3.html
@@ -39,8 +39,8 @@
         <h2>
             <strong>Pumbaa</strong>
         </h2>
-        <img src="images/pumbaa.png" title ="Pumbaa the Warthog">
         <p class ="characters">
+            <img src="images/pumbaa.png" class="contentimg" title ="Pumbaa the Warthog">
             I grew up loving Pumbaa because he is such a gentle soul who loves others and smiles in the face of adversity.  While he does
             have his dumb moments, he did choose to save a lion cub, knowing fullwell that lions eat warthogs, and raised Simba to be 
             different than the rest of the lions.  He also experienced bullying from his own species, but kept his head up and sung 
@@ -49,7 +49,7 @@
         <footer>
 			<div class="footer">
 				<div class="footerstuff">Emily Stevens</div>
-				<div class="footerstuff">Date Last Modified: 27 April 2021</div>
+				<div class="footerstuff">Date Last Modified: 29 April 2021</div>
 				<div class="footerstuff">stevense@guilford.edu</div>
 			</div>
 		</footer>
