--- a/StevensAssignment2_2.html
+++ b/StevensAssignment2_2.html
@@ -19,6 +19,8 @@
         <h1>
             Who am I?
         </h1>
+        <div id="remydiv"><img src="images/remy.jpg" id="remy" title ="Remy the Rat"></div>
+        <div id="largeview" class="dontshow"></div>
         <div class = "paragraphs">
             <p id = "firsttest">
                 I’m <strong>Emily Stevens</strong> and I’m a junior at the Early College at Guilford.  I’m a <em>competitive swimmer</em> for 
